--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -90,3 +90,30 @@ h3.border_bottom {
     width: 200px;
     height: 300px;
 }
+.right h5 {
+    font-size: 10px;
+}
+.product.product__style--3
+.product__content .prize li {
+    font-size: 10px;
+}
+.container.detail_book .star {
+    visibility:hidden;
+    font-size:30px;
+    cursor:pointer;
+}
+.container.detail_book .star:before {
+   content: "\2606";
+   position: absolute;
+   visibility:visible;
+}
+.container.detail_book .star:checked:before {
+   content: "\2605";
+   position: absolute;
+}
+.input_edit_comment {
+    display: none;
+}
+.input_edit_review {
+    display: none;
+}
