--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -186,3 +186,46 @@ label {
     font-weight: bold;
     font-size: 20px;
 }
+.right h5 {
+    font-size: 10px;
+}
+.container.detail_book .star {
+    visibility:hidden;
+    font-size:30px;
+    cursor:pointer;
+}
+.container.detail_book .star:before {
+   content: "\2606";
+   position: absolute;
+   visibility:visible;
+}
+.container.detail_book .star:checked:before {
+   content: "\2605";
+   position: absolute;
+}
+.input_edit_comment {
+    display: none;
+}
+.input_edit_review {
+    display: none;
+}
+.btn_require_edit {
+    width: 55px;
+}
+.user_detail .avatar img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.following img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.ul_permission {
+    list-style-type: none;
+}
+.btn_format {
+    width: 55px;
+}
+
